--- a/src/components/WorkHours.css
+++ b/src/components/WorkHours.css
@@ -1,8 +1,9 @@
 .hours-container {
     border: 1px solid grey;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     border-radius: 5px;
+    max-height: 50px;
 }
 
 .hours-time {
