--- a/src/components/MainDays.css
+++ b/src/components/MainDays.css
@@ -2,7 +2,7 @@
     display: inline-flex;
     border: 1px solid gray;
     border-radius: 5px;
-    margin-right: 25px;
+    margin-left: 15px;
 }
 
 .main-days button {
